# persona-orchestrate

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  skills.md
scripts/: mind-cli-accepts-one-nota-record-and-prints-one-nota-reply  mind-cli-opens-and-queries-work-item-through-daemon  mind-cli-sends-signal-frames-to-long-lived-daemon  mind-store-survives-process-restart
src/: activity.rs  claim.rs  command.rs  envelope.rs  error.rs  graph.rs  lib.rs  main.rs  memory.rs  role.rs  service.rs  supervision.rs  tables.rs  text.rs  transport.rs
src/actors/: config.rs  dispatch.rs  domain.rs  ingress.rs  manifest.rs  mod.rs  pipeline.rs  reply.rs  root.rs  store.rs  subscription.rs  trace.rs  view.rs
src/actors/store/: activity.rs  claims.rs  graph.rs  kernel.rs  memory.rs  mod.rs  persistence.rs  write_trace.rs
tests/: actor_topology.rs  cli.rs  daemon_wire.rs  memory.rs  smoke.rs  weird_actor_truth.rs
