[package]
name         = "persona-orchestrate"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona-orchestrate"
description  = "Typed orchestration state for Persona agents."
publish      = false

[lib]
name = "persona_orchestrate"
path = "src/lib.rs"

[[bin]]
name = "persona-orchestrate-daemon"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
unused = "warn"
dead_code = "warn"
