[package]
name         = "persona-mind"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona-mind"
description  = "Typed mind state for Persona agents."
publish      = false

[lib]
name = "persona_mind"
path = "src/lib.rs"

[[bin]]
name = "mind"
path = "src/main.rs"

[dependencies]
kameo               = { version = "0.20", default-features = false, features = ["macros", "tracing"] }
nota-codec          = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
signal-core         = { git = "https://github.com/LiGoldragon/signal-core.git" }
signal-persona-mind = { git = "https://github.com/LiGoldragon/signal-persona-mind.git" }
thiserror           = "2"
tokio               = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
